proj1/testing/error/inputNoSetting.inp
DECODE THIS

* B BETA I II III AAAA (YZ) (AB)
DECODE THIS
